chore: update README and add Javadoc comments in PessoaController and tests